Launcher now works for Windows!